Media Controls timeline: immediately update current time display

Before this patch, dragging the scrubber starting from its current
position would immediately update the current time display, but all
other ways of changing the scrubber (dragging from some other start
position, click on a position, or using the keyboard) would only update
the current time display once the media had finished seeking to the
desired position (which might have to wait for network requests).

This patch removes that distinction, and now immediately updates the
current time display whenever the timeline receives input. This should
make it easier to precisely set the current time.

BUG=695459,699096

Review-Url: https://codereview.chromium.org/2725893002
Cr-Commit-Position: refs/heads/master@{#455158}

Former-commit-id: 792dd3474f7076b0dc33126a90ba4affbaac2c7f